// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Asset Page AV player should render version (live audio stream) 1`] = `
<DocumentFragment>
  <header
    role="banner"
  >
    <div
      class="Wrapper-sc-7g3fro-0 fOqUqv"
      dir="ltr"
    >
      <div
        class="CenterWrapper-sc-7g3fro-1 ggwfud"
        dir="ltr"
      >
        <h2
          class="Title-sc-7g3fro-2 iqsZpo"
          dir="ltr"
        >
          Биз шахсий ҳаёт махфийлиги ва Куки(Cookies)га оид сиёсатимизни янгиладик
        </h2>
        <p
          class="ConsentBannerText-sc-7g3fro-4 fkYBRU"
          dir="ltr"
        >
          Биз шахсий ҳаёт махфийлиги ва Куки(Cookie)га оид сиёсатимизга айрим муҳим ўзгаришларни киритдик. Ва бу нарса сиз ва сизнинг маълумотингиз учун нимани англатиши ҳақида сизни бохабар этиш истагидамиз.
        </p>
        <ul
          class="Options-sc-7g3fro-3 jLugbT"
          dir="ltr"
        >
          <li
            class="ListItem-sc-7g3fro-5 iOzCnw"
            dir="ltr"
          >
            <button
              type="button"
            >
              Маъқул
            </button>
          </li>
          <li
            class="ListItem-sc-7g3fro-5 iOzCnw"
            dir="ltr"
          >
            <a
              href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
            >
              Нималар ўзгарди?
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="Banner-m3awbo-1 fDRnKv"
    >
      <div
        class="SvgWrapper-m3awbo-0 dPXtDJ"
      >
        <a
          class="StyledLink-m3awbo-2 cmbfGD"
          href="/uzbek"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 fTrFbY"
            focusable="false"
            height="24"
            viewBox="0 0 238.99 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="#000"
              stroke-width=".335"
              style="stroke: #fff;"
            >
              <path
                d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z"
              />
              <path
                d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z"
              />
              <path
                d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z"
              />
              <path
                d="M168.37 0v22.59"
                stroke-width="2"
              />
              <path
                d="M200.58 6.28h9.12l-6.76 9.25h6.76v1.35h-9.55l6.77-9.25h-6.34zM211.82 16.87V6.29h3.07a4.12 4.12 0 0 1 1.47.23 3 3 0 0 1 1 .61A2.38 2.38 0 0 1 218 8a2.72 2.72 0 0 1 .19 1 2.33 2.33 0 0 1-.39 1.37 2.68 2.68 0 0 1-1.23.89 4 4 0 0 1 1.06.36 2.85 2.85 0 0 1 .8.6 2.5 2.5 0 0 1 .5.81 2.76 2.76 0 0 1 0 2 2.48 2.48 0 0 1-.62.91 3.26 3.26 0 0 1-1.12.67 4.86 4.86 0 0 1-1.68.26zm1.51-9.21v3.16h1a2.8 2.8 0 0 0 1.69-.41 1.5 1.5 0 0 0 .55-1.28 1.75 1.75 0 0 0-.09-.56 1.13 1.13 0 0 0-.31-.47 1.57 1.57 0 0 0-.57-.32 2.72 2.72 0 0 0-.87-.12zm0 4.54v3.32h1.91a3.42 3.42 0 0 0 1.11-.15A2 2 0 0 0 217 15a1.31 1.31 0 0 0 .36-.54 1.83 1.83 0 0 0 .1-.59 1.54 1.54 0 0 0-.14-.66 1.38 1.38 0 0 0-.43-.52 2.15 2.15 0 0 0-.73-.34 3.92 3.92 0 0 0-1-.12zM227.28 6.29v1.37h-4.48v3.2h4.33v1.37h-4.33v3.29h4.63v1.36h-6.14V6.29zM236 6.29h1.89l-4.59 5 5.7 5.58h-2.07l-5.41-5.22v5.22H230V6.29h1.51v4.84zM189.7 6.14a5.69 5.69 0 0 1 4.08 1.55 5.15 5.15 0 0 1 1.63 3.89 5.07 5.07 0 0 1-1.65 3.87 5.85 5.85 0 0 1-4.14 1.55 5.52 5.52 0 0 1-4-1.53 5.11 5.11 0 0 1-1.62-3.85 5.23 5.23 0 0 1 1.6-3.92 5.59 5.59 0 0 1 4.1-1.56zm.06 1.44a4.1 4.1 0 0 0-3 1.14 3.87 3.87 0 0 0-1.17 2.9 3.8 3.8 0 0 0 1.17 2.85 4.35 4.35 0 0 0 5.89 0 3.87 3.87 0 0 0 1.18-2.88 3.78 3.78 0 0 0-1.18-2.83 4 4 0 0 0-2.88-1.18z"
              />
              <path
                d="M198.46 6.16v.23a2.22 2.22 0 0 0-.65 1.5.89.89 0 0 0 0 .17 1 1 0 0 1 .81 1 .84.84 0 0 1-.28.64 1 1 0 0 1-.67.26.89.89 0 0 1-.76-.38 1.7 1.7 0 0 1-.28-1 2.31 2.31 0 0 1 1.83-2.42z"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            role="text"
          >
            <span
              lang="en-GB"
            >
              BBC News
            </span>
            , O'zbek
          </span>
        </a>
        <a
          class="SkipLink-wmpyxz-0 foxPXR"
          dir="ltr"
          href="#content"
        >
          Саҳифага ўтиш
        </a>
      </div>
    </div>
    <nav
      class="StyledNav-sc-158x7z5-5 dWucaK"
      dir="ltr"
      role="navigation"
    >
      <div
        class="NavWrapper-sc-158x7z5-0 ermFdP"
      >
        <div
          class="ScrollableWrapper-t4argr-0 UDeIc"
        >
          <button
            aria-expanded="false"
            class="MenuButton-ukxuly-6 dGlJrg"
            dir="ltr"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MenuIcon-sc-1nq0eki-0 gKIQph"
              focusable="false"
              height="2.75rem"
              viewBox="0 0 44 44"
              width="2.75rem"
            >
              <path
                d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
              />
            </svg>
            <span
              class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            >
              Бўлимлар
            </span>
          </button>
          <div
            class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
            dir="ltr"
          >
            <ul
              class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              role="list"
            >
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek"
                >
                  Бош саҳифа
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/lotin"
                >
                  Lotinda
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/uzbekistan"
                >
                  Ўзбекистон
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/central_asia"
                >
                  Минтақа
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/world"
                >
                  Дунё
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/sport"
                >
                  Спорт
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                >
                  Илм-Фан
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                >
                  Технология
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/uzbek/media/video"
                >
                  Видео
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="StyledDropdown-ukxuly-0 NlGZD"
          height="0"
        >
          <ul
            class="DropdownUl-ukxuly-2 louIo"
            role="list"
          >
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek"
              >
                Бош саҳифа
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/lotin"
              >
                Lotinda
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/uzbekistan"
              >
                Ўзбекистон
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/central_asia"
              >
                Минтақа
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/world"
              >
                Дунё
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/sport"
              >
                Спорт
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
              >
                Илм-Фан
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/topics/31684f19-84d6-41f6-b033-7ae08098572a"
              >
                Технология
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/uzbek/media/video"
              >
                Видео
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </header>
  <noscript />
  <main
    class="GridWrapper-sc-12lwanc-0 StyledGrid-oo43dv-0 jHslwF"
    role="main"
  >
    <h1
      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
      id="content"
      tabindex="-1"
    >
      Ўзбек деҳқонининг косаси нега оқармайдиshort
    </h1>
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 Wrapper-sc-7tc6v2-0 kvwPKI"
    >
      <figure
        class="Figure-sc-6a3dhy-0 gJUCFc"
      >
        <div
          class="StyledVideoContainer-sc-13p1a4d-0 dKHIix"
        >
          <iframe
            allow="autoplay; fullscreen"
            allowfullscreen=""
            class="StyledIframe-fuo2ed-0 dIyDYU"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/uzbek/sport-23248721/bbc_world_service_west_africa/uz-Cyrl"
            title="Медиа плейер"
          />
          <noscript />
        </div>
      </figure>
    </div>
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae"
    >
      <strong
        aria-hidden="true"
        class="Headline-sc-1kh1qhu-0 hzbExq StyledFauxHeadline-sc-15zvetq-0 jJBkMr"
      >
        Ўзбек деҳқонининг косаси нега оқармайдиshort
      </strong>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi StyledTimestamp-oo43dv-1 jqCfrG"
    >
      <time
        class="StyledTimestamp-um718p-0 bAgcOD"
        datetime="2019-09-13"
      >
        13 сентябр 2019
      </time>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        <b>
          Ўзбек деҳқонининг косаси нега оқармайди
        </b>
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        <b>
          Ўзбек деҳқонининг косаси нега оқармайди
        </b>
        <b>
           heading
        </b>
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        <i
          class="italic-sc-1a0jt7x-0 bbwGZK"
        >
          <b>
            Ўзбек деҳқонининг косаси нега оқармайди
          </b>
        </i>
        <i
          class="italic-sc-1a0jt7x-0 bbwGZK"
        >
          <b>
             heading
          </b>
        </i>
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        <b>
          Ўзбек деҳқонининг косаси нега оқармайди
        </b>
        <b>
           crosshead 
        </b>
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Шу йил апрел ойида Ўзбекистон Президенти Ислом 
        <a
          class="InlineLink-hkwpaz-0 idscKS"
          href="https://bbc.com/uzbek"
        >
          Каримов ўзининг
        </a>
         Москвага сафари мобайнида Россияга Туркия каби мамлакатлардан келмай қолган қишлоқ хўжалик маҳсулотлари ўрнини Ўзбекистон қоплаб беришга тайёр эканлигини айтганди.
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Шу вақтгача ҳам ўзбекистонлик деҳқонлар ўз маҳсулотларини хорижга олиб 
        <b>
          чиқишда турли муаммоларга юз тутиб
        </b>
         келишган, апрель ойида президент қарори билан "Ўзагроэкспорт" мева-сабзавот маҳсулотларини экспорт қилиш билан шуғулланадиган ташқи савдо компанияси ҳам ташкил қилинди.
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Ўз мева-сабзавотини Россияга олиб чиқишда бу компания ёрдамига умид қилган боғбонларнинг гилослари бузила бошлагани ҳақидаги хабарлар ҳам тарқалди..
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Ҳозирда Ўзбекистонда айни пишиқчилик ва етиштирилган маҳсулот учун кенгроқ бозор топиш масаласи яна долзарб турар экан, мамлакат раҳбарининг сўзларидан сўнг вазият нақадар ўзгарган?
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Би-би-си билан суҳбатда иқтисодий таҳлилчи Анвар Ҳусаиновнинг айтишича, юқори минбардан айтилган сўзларга қарамай, қишлоқ хўжалиги маҳсулотларини хорижга, жумладан Россия бозорига олиб чиқишда ҳануз кўплаб муаммолар мавжуд.
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        "Албатта ўтган йилларга қараганда маҳсулотлар экспорти анча кўпайган. Россиядан юк машиналари келиб, тўғридан-тўғри деҳқонлардан нақд пулга 
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <div
        class="Wrapper-e2169q-0 kopXQT"
      >
        <ul
          class="BulletedList-sc-13z0d8v-0 vJhtt"
          dir="ltr"
          role="list"
        >
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            Ўзбек деҳқонининг косаси нега оқармайди
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            Ўзбек деҳқонининг косаси нега оқармайди
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <b>
              Ўзбек деҳқонининг косаси нега оқармайди
            </b>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            Ўзбек деҳқонининг косаси нега оқармайди
          </li>
        </ul>
      </div>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <div
        class="Wrapper-e2169q-0 kopXQT"
      >
        <ul
          class="BulletedList-sc-13z0d8v-0 vJhtt"
          dir="ltr"
          role="list"
        >
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/uzbek"
            >
              Ўзбек деҳқонининг косаси нега оқармайди
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/uzbek"
            >
              Ўзбек деҳқонининг косаси нега оқармайди
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/uzbek"
            >
              Ўзбек деҳқонининг косаси нега оқармайди
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/uzbek"
            >
              Ўзбек деҳқонининг косаси нега оқармайди
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK"
    >
      <figure
        class="Figure-sc-6a3dhy-0 gJUCFc"
      >
        <div
          class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX"
        >
          <div
            class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa"
          >
            <div
              class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
            >
              <div
                class="lazyload-placeholder"
              />
              <noscript />
              <p
                class="Copyright-sc-11lgtw-0 hDvIfz"
                role="text"
              >
                <span
                  class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                >
                  Сурат манбаси, 
                </span>
                <span
                  lang="en-GB"
                >
                  AFP
                </span>
              </p>
            </div>
          </div>
          <div
            class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL"
          />
        </div>
      </figure>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Ўзбек деҳқонининг косаси нега оқармайди transmission info 
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Ўзбек деҳқонининг косаси нега оқармайди footer 
      </p>
    </div>
  </main>
  <footer
    role="contentinfo"
  >
    <div
      class="Banner-m3awbo-1 gpxnCd"
    >
      <div
        class="SvgWrapper-m3awbo-0 dPXtDJ"
      >
        <a
          class="StyledLink-m3awbo-2 cmbfGD"
          href="/uzbek"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 fTrFbY"
            focusable="false"
            height="24"
            viewBox="0 0 238.99 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="#000"
              stroke-width=".335"
              style="stroke: #fff;"
            >
              <path
                d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z"
              />
              <path
                d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z"
              />
              <path
                d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z"
              />
              <path
                d="M168.37 0v22.59"
                stroke-width="2"
              />
              <path
                d="M200.58 6.28h9.12l-6.76 9.25h6.76v1.35h-9.55l6.77-9.25h-6.34zM211.82 16.87V6.29h3.07a4.12 4.12 0 0 1 1.47.23 3 3 0 0 1 1 .61A2.38 2.38 0 0 1 218 8a2.72 2.72 0 0 1 .19 1 2.33 2.33 0 0 1-.39 1.37 2.68 2.68 0 0 1-1.23.89 4 4 0 0 1 1.06.36 2.85 2.85 0 0 1 .8.6 2.5 2.5 0 0 1 .5.81 2.76 2.76 0 0 1 0 2 2.48 2.48 0 0 1-.62.91 3.26 3.26 0 0 1-1.12.67 4.86 4.86 0 0 1-1.68.26zm1.51-9.21v3.16h1a2.8 2.8 0 0 0 1.69-.41 1.5 1.5 0 0 0 .55-1.28 1.75 1.75 0 0 0-.09-.56 1.13 1.13 0 0 0-.31-.47 1.57 1.57 0 0 0-.57-.32 2.72 2.72 0 0 0-.87-.12zm0 4.54v3.32h1.91a3.42 3.42 0 0 0 1.11-.15A2 2 0 0 0 217 15a1.31 1.31 0 0 0 .36-.54 1.83 1.83 0 0 0 .1-.59 1.54 1.54 0 0 0-.14-.66 1.38 1.38 0 0 0-.43-.52 2.15 2.15 0 0 0-.73-.34 3.92 3.92 0 0 0-1-.12zM227.28 6.29v1.37h-4.48v3.2h4.33v1.37h-4.33v3.29h4.63v1.36h-6.14V6.29zM236 6.29h1.89l-4.59 5 5.7 5.58h-2.07l-5.41-5.22v5.22H230V6.29h1.51v4.84zM189.7 6.14a5.69 5.69 0 0 1 4.08 1.55 5.15 5.15 0 0 1 1.63 3.89 5.07 5.07 0 0 1-1.65 3.87 5.85 5.85 0 0 1-4.14 1.55 5.52 5.52 0 0 1-4-1.53 5.11 5.11 0 0 1-1.62-3.85 5.23 5.23 0 0 1 1.6-3.92 5.59 5.59 0 0 1 4.1-1.56zm.06 1.44a4.1 4.1 0 0 0-3 1.14 3.87 3.87 0 0 0-1.17 2.9 3.8 3.8 0 0 0 1.17 2.85 4.35 4.35 0 0 0 5.89 0 3.87 3.87 0 0 0 1.18-2.88 3.78 3.78 0 0 0-1.18-2.83 4 4 0 0 0-2.88-1.18z"
              />
              <path
                d="M198.46 6.16v.23a2.22 2.22 0 0 0-.65 1.5.89.89 0 0 0 0 .17 1 1 0 0 1 .81 1 .84.84 0 0 1-.28.64 1 1 0 0 1-.67.26.89.89 0 0 1-.76-.38 1.7 1.7 0 0 1-.28-1 2.31 2.31 0 0 1 1.83-2.42z"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            role="text"
          >
            <span
              lang="en-GB"
            >
              BBC News
            </span>
            , O'zbek
          </span>
        </a>
      </div>
    </div>
    <div
      class="SitewideLinksWrapper-sc-1gggobt-0 gccobV"
    >
      <div
        class="ConstrainedWrapper-sc-1gggobt-1 bpERjU"
      >
        <ul
          class="StyledList-sc-2e1ekc-0 bmlrLC"
          role="list"
        >
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/uzbek/institutional-50220995"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Нега сиз Би-би-сига ишонишингиз мумкин?
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/uzbek/institutional-36824297"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Фойдаланиш шартлари
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/uzbek/institutional-36824300"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Шахсий ҳаёт махфийлиги сиёсати
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/usingthebbc/cookies/"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Куки(Cookies)
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/uzbek/institutional-36826360"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Би-би-си билан боғланиш
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
              lang="en-GB"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                AdChoices / Do Not Sell My Info
              </span>
            </a>
          </li>
        </ul>
        <p
          class="StyledParagraph-sc-1gggobt-2 jQPFnr"
        >
          <span
            lang="en-GB"
          >
            © 
          </span>
          2020 BBC. Би-би-си ташқи сайтлар мазмуни учун масъул эмас. 
          <a
            class="StyledLink-nhmg8j-0 jHQlUp"
            href="https://www.bbc.co.uk/help/web/links/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fPnERB"
            >
              Ташқи линкларга бизнинг ёндашувимиз қандайлиги ҳақида маълумотга эга бўлинг
            </span>
          </a>
        </p>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Media Asset Page should render component 1`] = `
<DocumentFragment>
  <header
    role="banner"
  >
    <div
      class="Wrapper-sc-7g3fro-0 fOqUqv"
      dir="ltr"
    >
      <div
        class="CenterWrapper-sc-7g3fro-1 ggwfud"
        dir="ltr"
      >
        <h2
          class="Title-sc-7g3fro-2 iqsZpo"
          dir="ltr"
        >
          We don update our Privacy and Cookies Policy
        </h2>
        <p
          class="ConsentBannerText-sc-7g3fro-4 fkYBRU"
          dir="ltr"
        >
          We don make some important changes to our Privacy and Cookies Policy and we wan make you know wetin dis one mean for you and your personal infomation.
        </p>
        <ul
          class="Options-sc-7g3fro-3 jLugbT"
          dir="ltr"
        >
          <li
            class="ListItem-sc-7g3fro-5 iOzCnw"
            dir="ltr"
          >
            <button
              type="button"
            >
              OK
            </button>
          </li>
          <li
            class="ListItem-sc-7g3fro-5 iOzCnw"
            dir="ltr"
          >
            <a
              href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
            >
              Find out wetin don change
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="Banner-m3awbo-1 fDRnKv"
    >
      <div
        class="SvgWrapper-m3awbo-0 dPXtDJ"
      >
        <a
          class="StyledLink-m3awbo-2 cRiIvG"
          href="/pidgin"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 kxNqFm"
            focusable="false"
            height="24"
            viewBox="0 0 238 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="#000"
              stroke-width=".335"
              style="stroke: #fff;"
            >
              <path
                d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z"
              />
              <path
                d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z"
              />
              <path
                d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74zM185.18 16.87V6.28h3.35a3.46 3.46 0 0 1 2.41.82 2.82 2.82 0 0 1 .9 2.19 2.94 2.94 0 0 1-.46 1.63 2.64 2.64 0 0 1-1.26 1 6.42 6.42 0 0 1-2.3.32h-1.12v4.59zm3.09-9.24h-1.57v3.31h1.66a2.1 2.1 0 0 0 1.42-.44 1.56 1.56 0 0 0 .5-1.25q0-1.62-2.01-1.62zM194 6.3h1.51v10.57H194zM198.78 16.85V6.3h3.56a7.51 7.51 0 0 1 3.41.65 4.88 4.88 0 0 1 2 1.9 5.29 5.29 0 0 1 .74 2.74 5.18 5.18 0 0 1-.41 2 5.23 5.23 0 0 1-3 2.85 5.33 5.33 0 0 1-1.1.31 14.65 14.65 0 0 1-1.91.08zm3.41-9.21h-1.89v7.86h1.94a7.75 7.75 0 0 0 1.76-.16 4.12 4.12 0 0 0 1-.39 3.59 3.59 0 0 0 .77-.59 3.92 3.92 0 0 0 1.12-2.87 3.63 3.63 0 0 0-1.15-2.78 3.68 3.68 0 0 0-1-.66 4.07 4.07 0 0 0-1-.34 10.57 10.57 0 0 0-1.56-.07zM216.8 11.66h3.55v4.48a9.68 9.68 0 0 1-3.87.85 5.75 5.75 0 0 1-4.2-1.53 5.07 5.07 0 0 1-1.57-3.78 5.26 5.26 0 0 1 1.63-3.94 5.63 5.63 0 0 1 4.08-1.57 7.22 7.22 0 0 1 1.7.19 13.82 13.82 0 0 1 2 .71V8.6a7.43 7.43 0 0 0-3.75-1.1 4 4 0 0 0-2.92 1.18 3.93 3.93 0 0 0-1.19 2.9 3.9 3.9 0 0 0 1.19 2.94 4.23 4.23 0 0 0 3.06 1.14 7.12 7.12 0 0 0 2.17-.42h.14V13h-2zM223.5 6.3h1.5v10.57h-1.5zM236.65 6.3h1.44v10.57h-1.3l-7.07-8.14v8.14h-1.42V6.3h1.23l7.13 8.21z"
              />
              <path
                d="M168.37 0v22.59"
                stroke-width="2"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            role="text"
          >
            <span
              lang="en-GB"
            >
              BBC News
            </span>
            , Pidgin
          </span>
        </a>
        <a
          class="SkipLink-wmpyxz-0 foxPXR"
          dir="ltr"
          href="#content"
        >
          Waka go wetin de inside
        </a>
      </div>
    </div>
    <nav
      class="StyledNav-sc-158x7z5-5 dWucaK"
      dir="ltr"
      role="navigation"
    >
      <div
        class="NavWrapper-sc-158x7z5-0 ermFdP"
      >
        <div
          class="ScrollableWrapper-t4argr-0 UDeIc"
        >
          <button
            aria-expanded="false"
            class="MenuButton-ukxuly-6 dGlJrg"
            dir="ltr"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MenuIcon-sc-1nq0eki-0 gKIQph"
              focusable="false"
              height="2.75rem"
              viewBox="0 0 44 44"
              width="2.75rem"
            >
              <path
                d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
              />
            </svg>
            <span
              class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            >
              Plenti seshon
            </span>
          </button>
          <div
            class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
            dir="ltr"
          >
            <ul
              class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              role="list"
            >
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin"
                >
                  Home
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin/topics/3d5d5e30-dd50-4041-96d5-c970b20005b9"
                >
                  Nigeria
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin/topics/d2c2ba68-f9ad-4185-a6d1-7f6437256735"
                >
                  Africa
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin/world"
                >
                  World
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin/media/video"
                >
                  Video
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin/topics/4063f80f-cccc-44c8-9449-5ca44e4c8592"
                >
                  Sport
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin/topics/1c3b60a9-14eb-484b-a750-9f5b1aeaac31"
                >
                  Entertainment
                </a>
              </li>
              <li
                class="StyledListItem-sc-158x7z5-3 COeze"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="StyledLink-sc-158x7z5-2 gLWckh"
                  href="/pidgin/popular/read"
                >
                  Most popular
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="StyledDropdown-ukxuly-0 NlGZD"
          height="0"
        >
          <ul
            class="DropdownUl-ukxuly-2 louIo"
            role="list"
          >
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin"
              >
                Home
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin/topics/3d5d5e30-dd50-4041-96d5-c970b20005b9"
              >
                Nigeria
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin/topics/d2c2ba68-f9ad-4185-a6d1-7f6437256735"
              >
                Africa
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin/world"
              >
                World
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin/media/video"
              >
                Video
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin/topics/4063f80f-cccc-44c8-9449-5ca44e4c8592"
              >
                Sport
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin/topics/1c3b60a9-14eb-484b-a750-9f5b1aeaac31"
              >
                Entertainment
              </a>
            </li>
            <li
              class="StyledDropdownLi-ukxuly-3 dIsymM"
              role="listitem"
            >
              <a
                class="StyledDropdownLink-ukxuly-4 ikLbnY"
                href="/pidgin/popular/read"
              >
                Most popular
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </header>
  <noscript />
  <main
    class="GridWrapper-sc-12lwanc-0 StyledGrid-oo43dv-0 jHslwF"
    role="main"
  >
    <h1
      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
      id="content"
      tabindex="-1"
    >
      Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh with the Help of Drew & &lt; &gt;
    </h1>
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 Wrapper-sc-7tc6v2-0 kvwPKI"
    >
      <figure
        class="Figure-sc-6a3dhy-0 gJUCFc"
      >
        <div
          class="StyledVideoContainer-sc-13p1a4d-0 dKHIix"
        >
          <iframe
            allow="autoplay; fullscreen"
            allowfullscreen=""
            class="StyledIframe-fuo2ed-0 dIyDYU"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/pidgin/23248703/p01kx42v/pcm"
            title="Media player"
          />
          <noscript />
        </div>
      </figure>
    </div>
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae"
    >
      <strong
        aria-hidden="true"
        class="Headline-sc-1kh1qhu-0 hzbExq StyledFauxHeadline-sc-15zvetq-0 jJBkMr"
      >
        Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh with the Help of Drew & &lt; &gt;
      </strong>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi StyledTimestamp-oo43dv-1 jqCfrG"
    >
      <time
        class="StyledTimestamp-um718p-0 bAgcOD"
        datetime="2019-09-13"
      >
        13 September 2019
      </time>
      <div>
        <time
          class="StyledTimestamp-um718p-0 bAgcOD"
          datetime="2019-11-20"
        >
          New Informate 20 November 2019
        </time>
      </div>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        <b>
          This is an introduction in bold. & &lt; &gt;
        </b>
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <h2
        class="SubHeading-sc-1kh1qhu-1 jHLqCp"
        id="This-is-a-heading-<->"
        tabindex="-1"
      >
        This is a heading & &lt; &gt;
      </h2>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <h2
        class="SubHeading-sc-1kh1qhu-1 jHLqCp"
        id="This-is-a-subheading-<->"
        tabindex="-1"
      >
        This is a subheading & &lt; &gt;
      </h2>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <h2
        class="SubHeading-sc-1kh1qhu-1 jHLqCp"
        id="This-is-a-crosshead-<->"
        tabindex="-1"
      >
        This is a crosshead & &lt; &gt;
      </h2>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        This is regular paragraph text. "Lorem ipsum dolor sit amet", consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Bulleted list:
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <div
        class="Wrapper-e2169q-0 kopXQT"
      >
        <ul
          class="BulletedList-sc-13z0d8v-0 vJhtt"
          dir="ltr"
          role="list"
        >
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="http://www.bbc.com/afrique/23248423"
            >
              &lt;Media Asset Page&gt;
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="http://www.bbc.com/afrique/23248423"
            >
              &lt;Media Asset Page&gt;
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="http://www.bbc.com/afrique/23248423"
            >
              &lt;Media Asset Page&gt;
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/pidgin"
            >
              this is the link text
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/pidgin"
            >
              this is the link text
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/pidgin"
            >
              this is the link text
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Numbered list:
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <div
        class="Wrapper-e2169q-0 kopXQT"
      >
        <ul
          class="BulletedList-sc-13z0d8v-0 vJhtt"
          dir="ltr"
          role="list"
        >
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="http://www.bbc.com/afrique/23248423"
            >
              &lt;Media Asset Page&gt;
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="http://www.bbc.com/afrique/23248423"
            >
              &lt;Media Asset Page&gt;
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="http://www.bbc.com/afrique/23248423"
            >
              &lt;Media Asset Page&gt;
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/pidgin"
            >
              this is the link text
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/pidgin"
            >
              this is the link text
            </a>
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            <a
              class="InlineLink-hkwpaz-0 idscKS"
              href="https://bbc.com/pidgin"
            >
              this is the link text
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Lorem ipsum dolor sit amet, 
        <b>
          consectetur
        </b>
         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        <b>
           ullamco laboris nisi ut aliquip 
        </b>
        ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        <i
          class="italic-sc-1a0jt7x-0 bbwGZK"
        >
           in voluptate velit esse cillum 
        </i>
        dolore "eu fugiat nulla" pariatur. 
        <a
          class="InlineLink-hkwpaz-0 idscKS"
          href="https://bbc.com/pidgin"
        >
          Excepteur
        </a>
         sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Testing special characters: !"£$%^&*()_+=-{}[]:@~;'#&lt;&gt;?,./\\\`\\# 7.7 E 2₉₈₇₆₅₄₃₂₁₀⁹⁸⁷⁶⁵⁴³²¹⁰ⁿ☆★ŷŶŵŴÿþýüûúùø÷öõôóòñðïîíìëêéèçæåäãâáßÞÝÜÛÚÙØ×ÖÕÔÓÒÑÐÏÎÍÌËÊÉÈ
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        ÇÆÆÅÄÃÂÁÀ¿¾½¼»º¸·¶µ´±°¯®¬«ª©¨§¦¥¤£¢¡ ~#
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Table:
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Social media embed:
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Quote box:
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Correspondent quote box:
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Fact box:
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        ­
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        Lorem ipsum
        <a
          class="InlineLink-hkwpaz-0 idscKS"
          href="https://bbc.com/pidgin"
        >
           dolor sit amet
        </a>
        , consectetur adipiscing elit
      </p>
    </div>
    <div
      class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK"
    >
      <figure
        class="Figure-sc-6a3dhy-0 gJUCFc"
      >
        <div
          class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX"
        >
          <div
            class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa"
          >
            <div
              class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
            >
              <div
                class="lazyload-placeholder"
              />
              <noscript />
              <p
                class="Copyright-sc-11lgtw-0 hDvIfz"
                role="text"
              >
                <span
                  class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                >
                  Wia dis foto come from, 
                </span>
                <span
                  lang="en-GB"
                >
                  Google
                </span>
              </p>
            </div>
          </div>
          <div
            class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL"
          >
            <figcaption
              class="Caption-sc-16x70so-0 bjgllj"
            >
              <span
                class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
              >
                Wetin we call dis foto, 
              </span>
              <p>
                Psammead was named after the mythical sand creature
              </p>
            </figcaption>
          </div>
        </div>
      </figure>
    </div>
    <div
      class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK"
    >
      <figure
        class="Figure-sc-6a3dhy-0 gJUCFc"
      >
        <div
          class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX"
        >
          <div
            class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa"
          >
            <div
              class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
            >
              <div
                class="lazyload-placeholder"
              />
              <noscript />
              <p
                class="Copyright-sc-11lgtw-0 hDvIfz"
                role="text"
              >
                <span
                  class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                >
                  Wia dis foto come from, 
                </span>
                <span
                  lang="en-GB"
                >
                  Butterfly person
                </span>
              </p>
            </div>
          </div>
          <div
            class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL"
          >
            <figcaption
              class="Caption-sc-16x70so-0 bjgllj"
            >
              <span
                class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
              >
                Wetin we call dis foto, 
              </span>
              <p>
                A pretty little butterfly & &lt; &gt;
              </p>
            </figcaption>
          </div>
        </div>
      </figure>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <div
        class="Wrapper-e2169q-0 kopXQT"
      >
        <ul
          class="BulletedList-sc-13z0d8v-0 vJhtt"
          dir="ltr"
          role="list"
        >
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            sunt in culpa qui officia deserunt mollit anim id est laborum
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            sunt in culpa qui officia deserunt mollit anim id est laborum
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            sunt in culpa qui officia deserunt mollit anim id est laborum
          </li>
          <li
            class="BulletedListItem-sc-13z0d8v-1 kHsWph"
            role="listitem"
          >
            v3 draft
          </li>
        </ul>
      </div>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        This is transmission info 
      </p>
    </div>
    <div
      class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi"
    >
      <p
        class="Paragraph-k859h4-0 hymSIv"
      >
        This is the footer 
      </p>
    </div>
  </main>
  <section
    aria-labelledby="related-content-heading"
    class="GridWrapper-sc-12lwanc-0 hgpaqH"
    data-e2e="related-content"
    role="region"
  >
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 LegacyGridItemConstrainedLarge-opyob2-1 curbRF"
    >
      <div
        class="SectionLabelWrapper-sc-1x4gwjz-1 hsirkD StyledSectionLabel-opyob2-2 jpnPtT"
      >
        <div
          class="Bar-sc-1x4gwjz-0 jsgdXU"
        />
        <h2
          class="Heading-sc-1x4gwjz-2 eZofTG"
        >
          <span
            class="FlexColumn-wx5kdp-0 dgpsiS"
          >
            <span
              class="FlexRow-wx5kdp-2 dVBNyZ"
            >
              <span
                class="Title-wx5kdp-4 cERxQI"
                dir="ltr"
                id="related-content-heading"
              >
                Another thing we de for inside dis tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="StoryPromoUl-sc-171lqjd-1 isCYWc GridComponent-nf79gm-0 gjgzxV"
        dir="ltr"
        role="list"
      >
        <li
          class="StoryPromoLi-sc-171lqjd-0 jTGbev GridComponent-nf79gm-0 hgNruo"
          dir="ltr"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <div
                  class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="ImageOverlayWrapper-sc-1dvfmi3-2 dqBekx"
                />
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 hSJrur"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/pidgin/tori-23145776"
                >
                  Police Arrest 3 ontop Anambra Church Attack
                </a>
              </h3>
              <p
                class="Summary-sc-1dvfmi3-4 eaCWBB"
              >
                Governor Willie Obiano of Anambra State bin don promise say government go handle the matter sharp, sharp
              </p>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2017-08-08"
              >
                8th August 2017
              </time>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLi-sc-171lqjd-0 jTGbev GridComponent-nf79gm-0 hgNruo"
          dir="ltr"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <div
                  class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="ImageOverlayWrapper-sc-1dvfmi3-2 dqBekx"
                />
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 hSJrur"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/pidgin/tori-23143754"
                >
                  Lagos 'Gay' men Appear for Court, say Dem no dey Guilty
                </a>
              </h3>
              <p
                class="Summary-sc-1dvfmi3-4 eaCWBB"
              >
                The men wey dem arrest almost one week ago don say dem no dey guilty, as court order dem to go for sexual rehabilitation.
              </p>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2017-08-08"
              >
                8th August 2017
              </time>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLi-sc-171lqjd-0 jTGbev GridComponent-nf79gm-0 hgNruo"
          dir="ltr"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <div
                  class="ImagePlaceholder-sc-11u25v2-0 fNqlUz"
                />
                <div
                  class="ImageOverlayWrapper-sc-1dvfmi3-2 dqBekx"
                >
                  <div
                    aria-hidden="true"
                    class="StyledMediaIndicator-sc-1p6h86b-0 iRQPYq"
                    dir="ltr"
                  >
                    <div
                      class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
                    >
                      <svg
                        aria-hidden="true"
                        class="MediaIcon-sc-10lpekz-0 PhotoMediaIcon-sc-10lpekz-3 eqyZnv"
                        focusable="false"
                        height="13px"
                        viewBox="0 0 32 26"
                        width="16px"
                      >
                        <path
                          d="M9,2V0H4V2H0V26H32V2ZM6.5,10A2.5,2.5,0,1,1,9,7.52,2.5,2.5,0,0,1,6.5,10ZM20,23a9,9,0,1,1,9-9A9,9,0,0,1,20,23Z"
                        />
                        <circle
                          cx="20"
                          cy="14.02"
                          r="5.5"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 hSJrur"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/pidgin/23146654"
                >
                  <span
                    role="text"
                  >
                    <span
                      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                    >
                      Image gallery, 
                    </span>
                    <span>
                      Kenya Elections Pictures: 8 August 2017
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="Summary-sc-1dvfmi3-4 eaCWBB"
              >
                This na some of the picture wey our eye see as Kenya people go vote for election today
              </p>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2017-08-08"
              >
                8th August 2017
              </time>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLi-sc-171lqjd-0 jTGbev GridComponent-nf79gm-0 hgNruo"
          dir="ltr"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <div
                  class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="ImageOverlayWrapper-sc-1dvfmi3-2 dqBekx"
                >
                  <div
                    aria-hidden="true"
                    class="StyledMediaIndicator-sc-1p6h86b-0 iRQPYq"
                    dir="ltr"
                  >
                    <div
                      class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
                    >
                      <svg
                        aria-hidden="true"
                        class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
                        focusable="false"
                        height="12px"
                        viewBox="0 0 13 12"
                        width="13px"
                      >
                        <path
                          d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                        />
                        <path
                          d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                        />
                      </svg>
                      <time
                        class="StyledTime-jpt91x-0 bYtFje"
                        datetime="PT15S"
                      >
                        0:15
                      </time>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 hSJrur"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/pidgin/media-23147054"
                >
                  <span
                    role="text"
                  >
                    <span
                      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                    >
                      Audio, 
                    </span>
                    <span>
                      BBC News Pidgin One Minute News
                    </span>
                    <span
                      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                    >
                      , 0,15
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="Summary-sc-1dvfmi3-4 eaCWBB"
              >
                All di local and world tori wey you suppose know in 60 seconds!
              </p>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2017-08-17"
              >
                17th August 2017
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
  <footer
    role="contentinfo"
  >
    <div
      class="Banner-m3awbo-1 gpxnCd"
    >
      <div
        class="SvgWrapper-m3awbo-0 dPXtDJ"
      >
        <a
          class="StyledLink-m3awbo-2 cRiIvG"
          href="/pidgin"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 kxNqFm"
            focusable="false"
            height="24"
            viewBox="0 0 238 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="#000"
              stroke-width=".335"
              style="stroke: #fff;"
            >
              <path
                d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z"
              />
              <path
                d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z"
              />
              <path
                d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74zM185.18 16.87V6.28h3.35a3.46 3.46 0 0 1 2.41.82 2.82 2.82 0 0 1 .9 2.19 2.94 2.94 0 0 1-.46 1.63 2.64 2.64 0 0 1-1.26 1 6.42 6.42 0 0 1-2.3.32h-1.12v4.59zm3.09-9.24h-1.57v3.31h1.66a2.1 2.1 0 0 0 1.42-.44 1.56 1.56 0 0 0 .5-1.25q0-1.62-2.01-1.62zM194 6.3h1.51v10.57H194zM198.78 16.85V6.3h3.56a7.51 7.51 0 0 1 3.41.65 4.88 4.88 0 0 1 2 1.9 5.29 5.29 0 0 1 .74 2.74 5.18 5.18 0 0 1-.41 2 5.23 5.23 0 0 1-3 2.85 5.33 5.33 0 0 1-1.1.31 14.65 14.65 0 0 1-1.91.08zm3.41-9.21h-1.89v7.86h1.94a7.75 7.75 0 0 0 1.76-.16 4.12 4.12 0 0 0 1-.39 3.59 3.59 0 0 0 .77-.59 3.92 3.92 0 0 0 1.12-2.87 3.63 3.63 0 0 0-1.15-2.78 3.68 3.68 0 0 0-1-.66 4.07 4.07 0 0 0-1-.34 10.57 10.57 0 0 0-1.56-.07zM216.8 11.66h3.55v4.48a9.68 9.68 0 0 1-3.87.85 5.75 5.75 0 0 1-4.2-1.53 5.07 5.07 0 0 1-1.57-3.78 5.26 5.26 0 0 1 1.63-3.94 5.63 5.63 0 0 1 4.08-1.57 7.22 7.22 0 0 1 1.7.19 13.82 13.82 0 0 1 2 .71V8.6a7.43 7.43 0 0 0-3.75-1.1 4 4 0 0 0-2.92 1.18 3.93 3.93 0 0 0-1.19 2.9 3.9 3.9 0 0 0 1.19 2.94 4.23 4.23 0 0 0 3.06 1.14 7.12 7.12 0 0 0 2.17-.42h.14V13h-2zM223.5 6.3h1.5v10.57h-1.5zM236.65 6.3h1.44v10.57h-1.3l-7.07-8.14v8.14h-1.42V6.3h1.23l7.13 8.21z"
              />
              <path
                d="M168.37 0v22.59"
                stroke-width="2"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            role="text"
          >
            <span
              lang="en-GB"
            >
              BBC News
            </span>
            , Pidgin
          </span>
        </a>
      </div>
    </div>
    <div
      class="SitewideLinksWrapper-sc-1gggobt-0 gccobV"
    >
      <div
        class="ConstrainedWrapper-sc-1gggobt-1 bpERjU"
      >
        <ul
          class="StyledList-sc-2e1ekc-0 gRKcvt"
          role="list"
        >
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/pidgin/institutional-48528766"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Why you fit trust BBC News
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.co.uk/usingthebbc/terms/"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                How dem dey take use am
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.co.uk/aboutthebbc"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                As e concern BBC
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.co.uk/usingthebbc/privacy/"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Privacy Policy
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.co.uk/usingthebbc/cookies/"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Cookies
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/pidgin/institutional-42188215"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                Call BBC
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-2e1ekc-1 kUOQdM"
            role="listitem"
          >
            <a
              class="StyledLink-nhmg8j-0 dHbSzF"
              href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
              lang="en-GB"
            >
              <span
                class="StyleLinkText-nhmg8j-1 fPnERB"
              >
                AdChoices / Do Not Sell My Info
              </span>
            </a>
          </li>
        </ul>
        <p
          class="StyledParagraph-sc-1gggobt-2 jQPFnr"
        >
          <span
            lang="en-GB"
          >
            © 
          </span>
          2020 BBC. De external site no concern BBC. 
          <a
            class="StyledLink-nhmg8j-0 jHQlUp"
            href="https://www.bbc.co.uk/help/web/links/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fPnERB"
            >
              De way wey we de take go external link.
            </span>
          </a>
        </p>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
